# rack_iam_oss

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  FAQ.md  NOTICE  README.md  TESTING.md  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst  modules.rst  rack_iam.core.rst  rack_iam.rst  rack_iam.transform.cfdict.rst  rack_iam.transform.rst
examples/: iam_troposphere_integration.template  method_chaining.py  mutation.py  role_no_permissions.py  troposphere_integration.py
rack_iam/: __init__.py
rack_iam/core/: __init__.py  group.py  helpers.py  policy.py  role.py  statement.py  user.py
rack_iam/transform/: __init__.py
rack_iam/transform/cfdict/: __init__.py  group.py  policy.py  role.py  statement.py  user.py
tests/: __init__.py  test_cfdict_group.py  test_cfdict_policy.py  test_cfdict_role.py  test_cfdict_user.py  test_guards.py  test_iam_group.py  test_iam_policy.py  test_iam_role.py  test_iam_user.py
