[metadata]
name = rack_iam
author = Chris White
author-email = chris.white@rackspace.com
summary = A framework for AWS IAM components
license = Apache License 2.0
description-file =
    README.md
home-page = https://github.com/rackerlabs/rack_iam_oss
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Security
    Topic :: System :: Systems Administration

[build_sphinx]
all-files = true
source-dir = doc/source
build-dir = doc/build
config-dir = doc/source
